<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map"
        android:title="@string/label_google_map"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/places"
        android:title="@string/label_places_nearby"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/email"
        android:title="@string/label_send_email"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/label_about"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>